<resources>
    <string name="app_name">MeuCurriculo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment_degree">Hello blank fragment from degree</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment_professional_experience">Hello blank fragment from professional experience</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment_courses">Hello blank fragment from courses</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment publications</string>
    <string name="informacoes_pessoais_title">Informações pessoais</string>
    <string name="text_name">Nome completo</string>
    <string name="text_email">E-mail</string>
    <string name="text_phone">Telefone</string>
    <string name="text_address">Endereço</string>
    <string name="text_street">Rua</string>
    <string name="text_cep">CEP</string>
    <string name="text_city">Cidade</string>
    <string name="text_uf">UF</string>
    <string name="text_save_button">Salvar dados</string>
    <string name="notification_ask">Aceito receber notificações</string>
    <string name="preference_file_key">br.com.meu_curriculo_key</string>
    <string name="degree">Graduação</string>
    <string name="course">Curso</string>
    <string name="conclusion">Conclusão do curso</string>
    <string name="experience">Experiência</string>
    <string name="company">Empresa</string>
    <string name="courses">Cursos</string>
    <string name="course_name">Nome do curso</string>
    <string name="publications">Publicações</string>
    <string name="titulo">Título</string>
    <string name="description">Descrição</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="profile">Meu perfil</string>
</resources>
